# argus

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  mkdocs.yml  plan.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml  semantic-pr-title.yml
docs/: index.md
docs/getting-started/: installation.md  quickstart.md
docs/guides/: conversion.md  datasets.md  filtering.md  listing.md  splitting.md  stats.md  validation.md  viewer.md
docs/reference/: cli.md  python-api.md
src/argus/: __init__.py  __main__.py  cli.py  cli_common.py  discovery.py  rendering.py  viewers.py
src/argus/commands/: _utils.py  convert_command.py  filter_command.py  list_command.py  split_command.py  stats_command.py  unsplit_command.py  validate_command.py  view_command.py
src/argus/core/: __init__.py  background.py  base.py  coco.py  convert.py  filter.py  mask.py  probe.py  split.py  validate.py  validation.py  yolo.py
tests/: coco_ground_truth.py  conftest.py  test_add_background_command.py  test_classification.py  test_coco_ground_truth.py  test_coco_rle.py  test_convert.py  test_convert_yolo_to_coco.py  test_filter_command.py  test_list_command.py  test_mask.py  test_split_command.py  test_stats_command.py  test_validate.py  test_validate_command.py  test_view_command.py  test_yolo_ground_truth.py  yolo_ground_truth.py
